--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,12 +8,12 @@ body {
   background-image: url("../img/bg-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: left;
+  background-position: center;
 }
 
 /* Mis trabajos */
 
-#Mis-trabajos .image-top {
+#Mis-Comidas .image-top {
   height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
